--- a/assets/stylesheets/searchable_selectbox.css
+++ b/assets/stylesheets/searchable_selectbox.css
@@ -9,7 +9,7 @@
   margin-top: 1px;
   margin-bottom: 1px;
   font: 400 11px system-ui;
-  border: 1px solid #ccc;
+  /*border: 1px solid #ccc;*/
   border-radius: 3px;
   height: 24px;
   font-family: Verdana, sans-serif;
@@ -36,4 +36,8 @@ fieldset#filters td.values .select2-container--default {
 
 .select2-container {
   min-width: 100px;
+}
+
+.select2-container--default .select2-results>.select2-results__options {
+  max-height: 320px;
 }
